# LLVM-embedded-toolchain-for-Arm

./: build.sh  clean.sh  requirements.txt  setup.sh  versions.yml
scripts/: make.py  pyproject.toml
